--- a/package.json
+++ b/package.json
@@ -3,23 +3,35 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "bulma": "^0.7.1",
+    "bulma-extensions": "^1.0.14",
     "contentful": "^6.1.0",
     "express": "^4.15.4",
     "express-enforces-ssl": "^1.1.0",
     "helmet": "^3.8.1",
+    "moment": "^2.22.1",
+    "node-sass-chokidar": "^1.2.2",
+    "npm-run-all": "^4.1.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.17"
+    "react-markdown": "^3.3.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17",
+    "styled-components": "^3.2.6"
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"node index\"",
+    "start": "concurrently \"react-scripts start\" \"node index\" watch-css start-js",
+    "start-js": "react-scripts start",
     "heroku-postbuild": "react-scripts build",
-    "build": "react-scripts build",
+    "build": "react-scripts build-css build-js",
+    "build-js": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive"
   },
   "engines": {
     "node": "8.9.1",
